include $(top_srcdir)/Makefile.am.common

SUBDIRS =					\
	.					\
	include					\
	afs					\
	procmgmt				\
	util					\
	comerr					\
	cmd					\
	des					\
	rxgen					\
	lwp					\
	rx					\
	rxkad					\
	fsint					\
	audit					\
	auth					\
	ubik					\
	sys					\
	ptserver				\
	libacl					\
	kauth					\
	dir					\
	vlserver				\
	vol					\
	volser					\
	viced					\
	bozo					\
	afsd

# util: procmgmt
# bozo: procmgmt
