# $Id: Makefile.am,v 1.1 2001/06/05 20:17:53 shadow Exp $

include $(top_srcdir)/Makefile.am.common

bin_PROGRAMS = rxgen

rxgen_SOURCES = 	\
	rpc_main.c	\
	rpc_hout.c	\
	rpc_cout.c	\
	rpc_parse.c	\
	rpc_scan.c	\
	rpc_util.c	\
	rpc_svcout.c	\
	rpc_clntout.c	\
	rpc_util.h	\
	rpc_parse.h	\
	rpc_scan.h

