# $Id: Makefile.am,v 1.1 2001/06/05 20:17:53 shadow Exp $

include $(top_srcdir)/Makefile.am.common

SUBDIRS = afs

#bin_PROGRAMS = sys

lib_LIBRARIES=libutil.a

libutil_a_SOURCES =  	\
	assert.c	\
	base64.c	\
	casestrcpy.c	\
	ktime.c		\
	volparse.c	\
	hostparse.c	\
	hputil.c	\
	kreltime.c	\
	isathing.c	\
	get_krbrlm.c	\
	uuid.c		\
	serverLog.c	\
	dirpath.c	\
	fileutil.c	\
	netutils.c	\
	flipbase64.c	\
	afs_atomlist.c	\
	afs_lhash.c	\
	snprintf.c

