# $Id$

include $(top_srcdir)/Makefile.am.common

buildinclude = $(top_builddir)/include/afs

afsincludedir = $(includedir)/afs
afsinclude_HEADERS = 	\
	assert.h	\
	potpourri.h	\
	itc.h		\
	errors.h	\
	afsutil.h	\
	pthread_glock.h	\
	dirpath.h	\
	afs_atomlist.h	\
	fileutil.h	\
	ktime.h		\
	netutils.h	\
	packages.h	\
	pthread_nosigs.h \
	remote.h	\
	afs_lhash.h

build_HEADERZ = $(afsinclude_HEADERS)

